--- a/TP2/pom.xml
+++ b/TP2/pom.xml
@@ -25,6 +25,14 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.9.0</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -56,7 +64,7 @@
               <manifest>
                 <addClasspath>true</addClasspath>
                 <classpathPrefix>lib/</classpathPrefix>
-                <mainClass>main.java.sia.grupo19.App</mainClass>
+                <mainClass>sia.grupo19.App</mainClass>
               </manifest>
             </archive>
           </configuration>
